--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,13 +34,17 @@ dependencies:
   get: ^4.1.4
   cupertino_icons: ^1.0.2
   dots_indicator: ^2.1.0
-  flutter_launcher_icons: ^0.7.4
-  flutter_native_splash: ^0.1.9
+  flutter_native_splash: ^2.2.19
+  json_annotation: ^4.8.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  # flutter_launcher_icons: ^0.7.4
   flutter_lints: ^2.0.0
+  build_runner: ^2.3.3
+  json_serializable: ^6.6.1
+  
 
 
 flutter_native_splash:
